--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build --win",
-    "electron:serve": "vue-cli-service electron:serve",
+    "electron:serve": "NETWORK=testnet vue-cli-service electron:serve",
     "electron:debug": "vue-cli-service electron:serve --debug",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -26,7 +26,9 @@
     "starkbank-ecdsa": "^1.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "moment": "^2.29.1",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
