--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,20 +1,22 @@
-image: Visual Studio 2017
+image: Visual Studio 2019
 
 platform:
   - x64
-
-cache:
-  - node_modules
-  - '%USERPROFILE%\.electron'
 
 init:
   - git config --global core.autocrlf input
 
 install:
   - ps: Install-Product node 14 x64
-  - npm i
 
 build_script:
-  - npm run electron:build-win
+- cmd: >-
+    npm i
+
+    npm run electron:build-win
 
 test: off
+
+artifacts:
+- path: dist_electron/phpcoin-wallet 1.0.0.exe
+  name: phpcoin-wallet.exe
