--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "vue-cli-service lint",
     "electron:build-win": "vue-cli-service electron:build --win",
     "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "NETWORK=testnet vue-cli-service electron:serve",
+    "electron:serve": "vue-cli-service electron:serve",
     "electron:debug": "vue-cli-service electron:serve --debug",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
