Switching config from testnet to mainnet

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "network": "testnet",
+    "network": "mainnet",
     "testnet": {
         "miningNode": "https://miner1.testnet.phpcoin.net",
         "faucetLink": "https://node1.testnet.phpcoin.net/apps/faucet",
