--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "PHPCoin",
     "url": "https://phpcoin.net"
   },
-  "version": "1.0.10",
+  "version": "1.0.11",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -33,7 +33,8 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "moment": "^2.29.1",
-    "qrcode": "^1.4.4"
+    "qrcode": "^1.4.4",
+    "compare-versions": "^4.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
