Common js lib for crypto functions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "PHPCoin",
     "url": "https://phpcoin.net"
   },
-  "version": "1.0.17",
+  "version": "1.0.18",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -21,29 +21,28 @@
   },
   "main": "background.js",
   "dependencies": {
-    "argon2": "^0.28.2",
-    "axios": "^0.21.1",
-    "base-58": "0.0.1",
+    "argon2": "^0.28.5",
+    "axios": "^0.21.4",
     "btoa": "^1.2.1",
-    "core-js": "^3.6.5",
+    "compare-versions": "^4.1.3",
+    "core-js": "^3.23.1",
     "hex2bin": "^1.0.2",
-    "secp256k1": "^4.0.2",
-    "starkbank-ecdsa": "^1.1.2",
+    "moment": "^2.29.3",
+    "phpcoin-crypto": "git+https://github.com/phpcoinn/phpcoin-crypto.git",
+    "qrcode": "^1.5.0",
+    "secp256k1": "^4.0.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "moment": "^2.29.1",
-    "qrcode": "^1.4.4",
-    "compare-versions": "^4.1.1"
+    "vue-router": "^3.5.4",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-plugin-vuex": "^4.5.13",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.18",
+    "@vue/cli-plugin-eslint": "^4.5.18",
+    "@vue/cli-plugin-router": "^4.5.18",
+    "@vue/cli-plugin-vuex": "^4.5.18",
+    "@vue/cli-service": "^4.5.18",
     "babel-eslint": "^10.1.0",
-    "electron": "^12.0.15",
+    "electron": "^12.2.3",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
