Renamed network prefix

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "aboutUrl": "https://phpcoin.net",
         "walletUrl": "https://wallet.testnet.phpcoin.net:8001",
         "block_time": 30,
-        "network_prefix": "38",
+        "chain_prefix": "38",
         "masternode_collateral": 1000,
         "chainId": "99"
     },
@@ -20,7 +20,7 @@
         "aboutUrl": "https://phpcoin.net",
         "walletUrl": "https://wallet.phpcoin.net",
         "block_time": 60,
-        "network_prefix": "38",
+        "chain_prefix": "38",
         "masternode_collateral": 10000,
         "updateLink": {
             "linux": "https://phpcoin.net/download/phpcoin-wallet-linux",
