Renamed mainnet-alpha to testnet

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "defaultNetwork": "mainnet",
     "networks": {
-        "mainnet-alpha": {
+        "testnet": {
             "miningNode": "https://miner1.phpcoin.net",
             "walletNode": "https://wallet.phpcoin.net",
             "faucetLink": "https://faucet.phpcoin.net/apps/faucet",
